implement fleet management api, use cases and persistence

--- a/fleet-management/src/main/resources/application.yml
+++ b/fleet-management/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
   application:
     name: fleet-management
 
+  jpa:
+    hibernate:
+      ddl-auto: validate
+
 management:
   endpoints:
     web.exposure.include: '*'
